Your descriptive commit message here

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "concurrently \"node index.js\" \"node server.js\""
   },
   "author": "Mohd Uzair Ansari",
   "license": "ISC",
@@ -17,5 +17,8 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "pg": "^8.16.3"
+  },
+  "devDependencies": {
+    "concurrently": "^9.2.1"
   }
 }
